--- a/VagrantFile
+++ b/VagrantFile
@@ -7,6 +7,7 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
 	config.vm.synced_folder ".", "/repos/vagrant", :disabled => false
+	config.vm.synced_folder "../harmony-api/", "/repos/api", :disabled => false
 
 	config.vbguest.auto_update = true
 	config.vbguest.no_remote = false
